# autonomous_excavator

./: .gitignore  CMakeLists.txt  package.xml
Arduino/ElectricalExcavator/: ElectricalExcavator.ino
autonomous_excavator/: CMakeLists.txt  package.xml  udp.py
autonomous_excavator/autonomous_excavator/: udp.py
autonomous_excavator/config/: machine_visualizer.rviz
autonomous_excavator/include/: MarchingCubes.cpp  MarchingCubes.cpp.old  MarchingCubes.h  MarchingCubes.hpp  MarchingCubes.hpp.old  MarchingCubesVolumes.cppaaaa  Vec3.cpp  Vec3.h  camera_class.cpp
autonomous_excavator/launch/: mabx_launch.py  visualizer_launch.py
autonomous_excavator/scripts/: udp_node_state.py  udp_tx_node.py
autonomous_excavator/src/: camera_action_server.cpp  camera_node.cpp  excavator_tf2_broadcaster.cpp  joint_publisher.cpp  marching_cube_engine.cpp  marching_cubes_node.cpp  motion_action_server.cpp  stroke_publisher.cpp
autonomous_excavator/urdf/: _d415.urdf.xacro  _d455.urdf.xacro  _materials.urdf.xacro  _usb_plug.urdf.xacro  electrical_excavator.urdf.xacro
autonomous_excavator/urdf/meshes/MarchingCubes/: C1.stl  C2.stl  C5.stl  C9.stl
autonomous_excavator/urdf/meshes/electrical/: Boom.STL  CameraBracket.STL  Swing.STL  base.stl  camera_bracket.stl  container.stl
autonomous_excavator/urdf/meshes/hydraulic/: Boom.STL
autonomous_excavator_interfaces/: CMakeLists.txt  package.xml
autonomous_excavator_interfaces/action/: Motion.action  Reconstruct.action
autonomous_excavator_interfaces/msg/: Float64Array.msg
config/: machine_visualizer.rviz
include/: Blade.cpp  Blade.h  CMakeLists.txt  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesAmbiguity.scad  MarchingCubesVolumes.scad  Vec3.cpp  Vec3.h
launch/: surface_reconstructor_launch.py  visualizer_launch.py
msg/: Feedback.msg
realsense-ros/realsense2_description/urdf/: test_d455_camera.urdf.xacro
scripts/: udp_node_rx.py
src/: blade_node.cpp  blade_node.cpp.old  camera_reader.cpp  depth_image_to_point_cloud.cpp  excavator_tf2_broadcaster.cpp  excavator_tf2_broadcaster.cpp.cpp  feedback_logger.cpp  home_stroke_publisher.cpp  joint_publisher.cpp  joint_publisher.cpp.old  marching_cubes_node.cpp  marching_cubes_node.cpp.old  merged.cpp  roi_node.cpp  serial_interface.cpp  serial_rx.cpp  serial_tx.cpp  stroke_publisher.cpp  surface_reconstructor.cpp  test.cpp  test2.cpp  udp_interface.cpp
urdf/: electrical_excavator.urdf  hydraulic_excavator.urdf
urdf/meshes/MarchingCubes/: C11.stl  C15.stl
urdf/meshes/electrical/: Arm.STL  Boom.STL  Bucket.STL  D455.STL
urdf/meshes/hydraulic/: Arm.STL  Base.STL  Bucket.STL
